--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aryanshrestha",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://aryanstha.github.io/aryanstha.github.io"
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
