--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ashthornton/asscroll": "^2.0.7",
     "deploy-to-github-pages": "^1.0.1",
     "events": "^3.3.0",
+    "gh-pages": "^4.0.0",
     "gsap": "^3.10.4",
     "lil-gui": "^0.16.1",
     "three": "^0.141.0",
