--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "aryanshrestha",
+  "name": "aryan",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://aryanstha.github.io/aryanstha.github.io"
+  "homepage": "https://aryanstha.github.io/aryanstha.github.io",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
